# phaethon

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytests.ini
.github/workflows/: ci.yml  publish.yml
benchmarks/: benchmark_anomalies.py  benchmark_vs_pint.py  benchmark_vs_pydantic_pint.py  test_pint_parity.py
docs/: advanced_physics.md  getting-started.md  index.md  llms.txt  requirements.txt  robots.txt
docs/docs/: exceptions.md  glossary.md  index.md  utilities.md
docs/docs/data/: index.md  io.md  schema.md  semantics.md
docs/docs/physics/: algebra.md  compute.md  config.md  custom.md  domains.md  fluent.md  index.md  units.md
docs/docs/pinns/: calculus.md  fno.md  index.md  losses.md  tensors.md
docs/docs/sciml/: estimators.md  index.md  metrics.md  transformers.md
docs/stylesheet/: landing.css  quickstart.css  style.css
examples/: 01_types_and_basics.py  01_wearable_health_data.py  02_food_manufacturing_scale.py  02_iot_sensor_normalization.py  03_multi_region_tariffs.py  03_oop_math_and_guardrails.py  04_energy_grid_audits.py  04_strict_physics_guardrails.py  05_contextual_physics.py  05_f1_telemetry_vectorization.py  06_structural_stress_testing.py  06_temporal_flexibility.py  07_financial_billing_precision.py  07_registry_introspection.py  08_custom_domain_creation.py  08_gas_pipeline_thermodynamics.py  09_end_to_end_esg_pipeline.py  09_scientific_computing.py  10_pandas_groupby_physics.py  10_quantum_mechanics_prepare.py  11_asteroid_impact_stacking.py  11_scikit_learn_transformer.py  12_handling_sensor_drift.py  12_pandas_matplotlib_integration.py  13_dynamic_alert_thresholds.py  13_scipy_optimization.py  14_cloud_compute_costs.py  14_sympy_algebraic_physics.py  15_scikit_learn_pipeline.py  T01_Chisa_Fundamentals.ipynb  T01_Phaethon_Fundamentals.ipynb  T02_Chisa_RealWorld_Workflow.ipynb  T02_Phaethon_RealWorld_Workflow.ipynb
overrides/: main.html
rust_src/: lib.rs
src/chisa/: __init__.py  exceptions.py  u.py
src/chisa/core/: __init__.py  axioms.py  base.py  engine.py  registry.py  vmath.py
src/chisa/units/: __init__.py  area.py  data.py  density.py  energy.py  force.py  length.py  mass.py  power.py  pressure.py  speed.py  temperature.py  time.py  volume.py
src/phaethon/: __init__.py  axiom.py  exceptions.py  linalg.py  ml.py  pinns.py  random.py  u.py  units.py
src/phaethon/core/: __init__.py  axioms.py  base.py  compat.py  config.py  constants.py  dataset.py  engine.py  fluent.py  io.py  linalg.py  plotting.py  random.py  registry.py  schema.py  semantics.py  tensor.py  vmath.py
src/phaethon/core/backends/: __init__.py  protocol.py
src/phaethon/core/backends/pd_engine/: converter.py  engine.py  extractor.py  imputer.py  localizer.py  validator.py
src/phaethon/core/backends/pl_engine/: converter.py  engine.py  extractor.py  imputer.py  localizer.py  validator.py
src/phaethon/core/ml/: estimator.py  features.py  metrics.py  preprocessing.py  selection.py
src/phaethon/core/pinns/: calculus.py  layers.py  loss.py  ops.py  pi_theorem.py  tensor.py
src/phaethon/core/units/: acceleration.py  area.py  astrophysics.py  chemistry.py  currency.py  data.py  density.py  electromagnetism.py  energy.py  fluid.py  force.py  frequency.py  geometry.py  kinematics.py  length.py  mass.py  nuclear.py  photometry.py  power.py  pressure.py  quantum.py  scalar.py  speed.py  temperature.py  thermodynamics.py  time.py  viscosity.py  volume.py  waves.py
src/phaethon/units/: __init__.py  currency.py  data.py  electromagnetism.py  energy.py  frequency.py  length.py  mass.py  photometry.py  power.py  pressure.py  speed.py  time.py
tests/: conftest.py  helpers.py
tests/test_core/: test_compat.py  test_config.py
tests/test_data/: test_io.py  test_schema_pandas.py  test_schema_polars.py
tests/test_physics/: test_algebra.py  test_compute.py  test_guardrails.py  test_units.py
tests/test_pinns/: test_calculus.py  test_fno.py  test_losses.py  test_ptensor.py
tests/test_sciml/: test_estimators.py  test_transformers.py
unitflex/: __init__.py
