[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phaethon"
version = "0.3.0"
description = "Dimensional Data Pipelines & Semantic Data Transformations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Zahraan Dzakii Tsaqiif", email = "zahraandzakiits@gmail.com"}
]

keywords = [
    "data engineering", "schema validation", "pandas", "polars",
    "physics", "dimensional analysis", "data pipeline",
    "numpy", "unit conversion", "machine learning", "semantic"
]

dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "rapidfuzz>=3.0.0"
]

[project.optional-dependencies]
polars = ["polars>=1.0.0"]
all = ["polars>=1.0.0"]

classifiers = [
    # Development Status
    "Development Status :: 4 - Beta",
    
    # Intended Audiences
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    
    # Topics
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    
    # License & Environment
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    
    # Supported Python Versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/rannd1nt/phaethon"
Repository = "https://github.com/rannd1nt/phaethon.git"
"Bug Tracker" = "https://github.com/rannd1nt/phaethon/issues"