[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "phaethon"
version = "0.4.0"
description = "End-to-End Physics-Constrained Scientific Computing & Sci-ML Framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Zahraan Dzakii Tsaqiif", email = "zahraandzakiits@gmail.com"}
]

keywords = [
    "data engineering", "schema validation", "pandas", "polars",
    "physics", "dimensional analysis", "data pipeline", "pytorch",
    "numpy", "unit conversion", "machine learning", "semantic", "scikit-learn",
    "normalization", "scientific", "neural networks"
]

dependencies = [
    "numpy>=1.26.0"
]

classifiers = [
    # Development Status
    "Development Status :: 4 - Beta",
    
    # Intended Audiences
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    
    # Topics
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    
    # License & Environment
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    
    # Supported Python Versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[project.optional-dependencies]
pandas = ["pandas>=2.0.0"]
polars = ["polars>=1.0.0"]
rapidfuzz = ["rapidfuzz>=3.0.0"]
h5 = ["h5py>=3.0.0"]
arrow = ["pyarrow>=14.0.0"]
sklearn = ["scikit-learn>=1.3.0"]
torch = ["torch>=2.0.0"]

dataframe = ["pandas>=2.0.0", "rapidfuzz>=3.0.0"]
io = ["h5py>=3.0.0", "pyarrow>=14.0.0"]
sciml = ["scikit-learn>=1.3.0", "torch>=2.0.0"]

all = [
    "pandas>=2.0.0",
    "polars>=1.0.0",
    "rapidfuzz>=3.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "h5py>=3.0.0",
    "pyarrow>=14.0.0"
]

dev = ["pytest>=7.0.0", "hypothesis>=6.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.maturin]
python-source = "src"
module-name = "phaethon._rust_core"

[project.urls]
Homepage = "https://github.com/rannd1nt/phaethon"
Repository = "https://github.com/rannd1nt/phaethon.git"
"Bug Tracker" = "https://github.com/rannd1nt/phaethon/issues"